# Reviewcheck

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  glrc  glrc.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
.github/data/: wordlist.txt
.github/workflows/: check.yml  deploy.yml  reviewcheck-pipeline.yml
docs/: README.md
docs/faq/: faq.md
docs/getting-started/: README.md
reviewcheck/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py  exceptions.py  merge_request.py  reactions.py  rich_components.py  utils.py
reviewcheck/common/: __init__.py  constants.py  exceptions.py  url_builder.py
src/application/: .gitignore
tests/: __init__.py  test_config.py  test_merge_requests.py  test_reviewcheck.py
