[tool.poetry]
name = "reviewcheck"
version = "0.1.0"
description = "Tool to stay up to date with your reviews on GitLab – Don't let a comment slip you by"
authors = ["Simon Bengtsson <simon.bengtsson.3@volvocars.com>", "Pontus Laos <pontus.laos@volvocars.com>"]
license = "Apache-2.0 license"
readme = "README.md"
homepage = "https://github.com/volvo-cars/Reviewcheck"
keywords = ["code review", "gitlab"]

[tool.poetry.scripts]
reviewcheck = "reviewcheck.app:run"

[tool.poetry.dependencies]
python = "^3.8"
rich = {version = "^12.4.4", python = "3.8"}
requests = {version = "^2.27.1", python = "3.8"}
PyYAML = {version = "^6.0", python = "3.8"}
shtab = {version = "^1.5.4", python = "3.8"}
colorama = {version = "^0.4.4", python = "3.8"}

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", python = "3.8"}
mypy = {version = "^0.950", python = "3.8"}
flake8 = {version = "^4.0.1", python = "3.8"}
isort = {version = "^5.10.1", python = "3.8"}
pytest = {version = "^7.1.2", python = "3.8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
color_output = true
profile = "black"
