[tool.poetry]
name = "reviewcheck"
version = "0.5.1"
description = "Tool to stay up to date with your reviews on GitLab – Don't let a comment slip you by"
authors = ["Simon Bengtsson <simon.bengtsson.3@volvocars.com>", "Pontus Laos <pontus.laos@volvocars.com>"]
license = "Apache-2.0 license"
readme = "README.md"
homepage = "https://github.com/volvo-cars/Reviewcheck"
keywords = ["code review", "gitlab"]

[tool.poetry.scripts]
reviewcheck = "reviewcheck.app:run"

[tool.poetry.dependencies]
python = "^3.6.9"
requests = "^2.27.1"
pyyaml = "^5.1"
shtab = "^1.5.4"
colorama = "^0.4.4"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = ">=7.0.1"
types-PyYAML = "^6.0.7"
types-requests = "^2.27.29"
isort = "^5.10.1"
black = "^22.1.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
color_output = true
profile = "black"

[[tool.mypy.overrides]]
module = [
    "shtab",
    "rich",
    "rich.console",
    "rich.panel",
    "rich.progress",
    "rich.table",
    "rich.text"
]
ignore_missing_imports = true
