[tool.poetry]
name = "reviewcheck"
version = "0.5.1"
description = "Tool to stay up to date with your reviews on GitLab – Don't let a comment slip you by"
authors = ["Simon Bengtsson <simon.bengtsson.3@volvocars.com>", "Pontus Laos <pontus.laos@volvocars.com>"]
license = "Apache-2.0 license"
readme = "README.md"
homepage = "https://github.com/volvo-cars/Reviewcheck"
keywords = ["code review", "gitlab"]

[tool.poetry.scripts]
reviewcheck = "reviewcheck.app:run"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.28.2"
PyYAML = ">=5.1"
shtab = "^1.5.8"
colorama = "^0.4.6"
rich = "^13.3.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"
types-PyYAML = "^6.0.12.9"
types-requests = "^2.28.11.17"
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.1.1"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
color_output = true
profile = "black"

[[tool.mypy.overrides]]
module = [
    "shtab",
    "rich",
    "rich.console",
    "rich.panel",
    "rich.progress",
    "rich.table",
    "rich.text"
]
ignore_missing_imports = true
